--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2641,7 +2641,7 @@
 		}
 
 		.wrapper.style1 {
-			background-color: #66625D;
+			background-color: #2f7a78;
 			color: #ffffff;
 		}
 
@@ -2795,7 +2795,7 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #2e3842;
+			background-color: #10313e;
 		}
 
 		.wrapper.style3 {
@@ -3160,7 +3160,7 @@
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #66625D;
+		background: #2f7a78;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
@@ -3254,7 +3254,7 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #2e3842;
+		background: #1d5a67;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
@@ -3701,7 +3701,7 @@
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: #1d242a;
+		background-color: rgba(29, 90, 103, 1.0);
 		text-align: center;
 	}
 
@@ -3791,7 +3791,7 @@
 	}
 
 	body.landing #footer {
-		background-color: rgba(29, 36, 42, 0.9);
+		background-color: rgba(29, 90, 103, 0.9);
 	}
 
 	body.is-mobile.landing #page-wrapper {
