--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,7 +4,7 @@
 		<h2>{{ site.title }}</h2>
 		<p>{{ site.description }}</p>
 		<ul class="actions">
-			<li><a href="https://form.jotform.com/geohack/2018" class="button special">Sign Up</a></li>
+			<li><a href="{{ site.banner_button_url }}" class="button special">{{ site.banner_button_text }}</a></li>
 		</ul>
 	</div>
 	<a href="#one" class="more scrolly">Learn More</a>
