--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,13 +2,18 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2>ABOUT GEOHACKWEEK</h2>
-			<p>Geohackweek is a 5-day hackweek to be held at the
-				<a href="http://escience.washington.edu/">University of Washington eScience Institute.</a>
-				Participants will learn about open source technologies used to analyze geospatial datasets.
-				Mornings will consist of interactive lectures,
-				and afternoon sessions will involve facilitated exploration of datasets
-				and hands-on software development. </p>
+			<h2>ABOUT OCEAN HACKWEEK</h2>
+			<p>
+				The Ocean Hackweek is a 5-day learning hackathon geared towards democratizing data access
+				and increasing exposure to technological assets developed as part of the
+				Ocean Observatories Initiative (OOI). The hackweek will be held at the University of Washington
+				from Aug. 20 - Aug. 24 2018 with goals of facilitating processes that accelerate research,
+				promoting collaboration and cultivating data science literacy among the scientific community
+				served by the OOI.
+			</p>
+			<p>
+				<a href="https://oceanhackweek.github.io/CAHW2018_website/">See the previous cabled array hackweek.</a>
+			</p>
 		</header>
 		<!--<ul class="icons major">-->
 			<!--<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span>-->
