--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -13,27 +13,22 @@
 					<img src="assets/images/escience.png" alt="">
 				</div>
 				<div class="sponsors-logo">
-					<img src="assets/images/moore.png" alt="">
+					<img src="assets/images/apl_logo_blue.png" alt="">
 				</div>
 				<div class="sponsors-logo">
-					<img src="assets/images/sloan.png" alt="">
+					<img src="assets/images/uwocean.jpg" alt="">
 				</div>
 
 			</div>
 			<div class="sponsors-row">
 				<div class="sponsors-logo">
-					<img src="assets/images/apl_logo_blue.png" alt="">
+					<img src="assets/images/nsf.jpeg" alt="">
 				</div>
 				<div class="sponsors-logo">
-					<img src="assets/images/uwamath.gif" alt="">
+					<img src="assets/images/ooi.jpg" alt="">
 				</div>
 				<div class="sponsors-logo">
-					<img src="assets/images/COE_UW_purp.png" alt="">
-				</div>
-			</div>
-			<div class="sponsors-row">
-				<div class="sponsors-logo">
-					<img src="assets/images/sefs.png" alt="">
+					<img src="assets/images/col.png" alt="">
 				</div>
 			</div>
 		</div>
