--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,14 +2,16 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2>ABOUT OCEAN HACKWEEK</h2>
+			<h2>ABOUT OCEANHACKWEEK</h2>
 			<p>
-				The Ocean Hackweek is a 5-day learning hackathon geared towards democratizing data access
-				and increasing exposure to technological assets developed as part of the
-				Ocean Observatories Initiative (OOI). The hackweek will be held at the University of Washington
-				from Aug. 20 - Aug. 24 2018 with goals of facilitating processes that accelerate research,
-				promoting collaboration and cultivating data science literacy among the scientific community
-				served by the OOI.
+				The Oceanhackweek is a 5-day learning hackathon built on three core components:
+				tutorials on state-of-the-art methodology, peer-learning,
+				and on-site project work in a collaborative environment.
+				This setup is particularly powerful for sciences that require not only domain-specific knowledge,
+				but also effective computational workflows to foster rapid exchange of ideas and make discovery.
+				By democratizing data access and increasing exposure to technological assets,
+				our goals are to accelerate research,
+				promote collaboration and cultivate data science literacy among the ocean sciences community.
 			</p>
 			<p>
 				<a href="https://oceanhackweek.github.io/CAHW2018_website/">See the previous cabled array hackweek.</a>
