--- a/_includes/section-four.html
+++ b/_includes/section-four.html
@@ -2,7 +2,7 @@
 <section id="four" class="wrapper style2 special">
     <div class="inner">
         <header class="major">
-            <h2>Location TBD</h2>
+            <h2>Location</h2>
         </header>
         <div id="map"></div>
         <!--<ul class="icons mapdir">-->
@@ -14,13 +14,13 @@
     </div>
 </section>
 <script type="application/javascript">
-    var map = L.map('map').setView([47.650159, -122.312124], 12);
+    var map = L.map('map').setView([47.65338269999999, -122.3118654], 12);
 
     L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 
     L.marker([47.65338269999999, -122.3118654]).addTo(map)
-        .bindPopup('<b><span style="color: black">UW Oceanography</span></b>')
+        .bindPopup('eScience Institute <br/> WRF Data Science Studio, UW Physics/Astronomy Tower, 6th Floor, Campus Box 351570, 3910 15th Ave NE, Seattle, WA 98195')
         .openPopup();
 </script>
