--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -13,7 +13,7 @@
 					<img src="assets/images/escience.png" alt="">
 				</div>
 				<div class="sponsors-logo">
-					<img src="assets/images/apl_logo_blue.png" alt="">
+					<img src="assets/images/apl_logo_blue.jpg" alt="">
 				</div>
 				<div class="sponsors-logo">
 					<img src="assets/images/uwocean.jpg" alt="">
