--- a/_includes/section-one-two.html
+++ b/_includes/section-one-two.html
@@ -2,37 +2,39 @@
 <section id="one-two" class="wrapper style2 special">
 	<div class="inner">
 		<header class="major">
-			<h2>ABOUT OOI</h2>
+			<h2>Big Ocean Data</h2>
 			<p>
-				The National Science Foundation-funded
-                <a href="http://oceanobservatories.org/">Ocean Observatories Initiative (OOI)</a> is
-                an integrated infrastructure program composed of science-driven platforms and
-                sensor systems that measure physical, chemical, geological and biological properties and
-                processes from the seafloor to the air-sea interface.
+                We focus on integrative analysis and computational workflows in ocean sciences.
+                The goal is to explore large oceanographic data sets from physical, chemical, geological,
+                and biological sensors deployed from the seafloor to the air-sea interface.
+                Examples include those from the National Science Foundations’
+                <a href="http://oceanobservatories.org/">Ocean Observatories Initiative (OOI)</a>
+                and other large-scale ocean observing assets, such as
+                <a href="http://www.argo.ucsd.edu/">Argo</a>, <a href="https://ioos.noaa.gov/">IOOS</a>, etc.
 			</p>
 		</header>
-		<ul class="icons major">
-            <li>
-                <a class="icon-link" href="http://oceanobservatories.org/data/" title="OOI Data">
-                    <span class="icon fa-database major style1">
-                        <span class="label">Data</span>
-                    </span>
-                </a>
-			</li>
-			<li>
-                <a class="icon-link" href="http://oceanobservatories.org/observatories/" title="The Observatory">
-                    <span class="icon fa-map major style1">
-                        <span class="label">Observatory</span>
-                    </span>
-                </a>
-			</li>
-            <li>
-                <a class="icon-link" href="http://oceanobservatories.org/science/" title="Science">
-                    <span class="icon fa-flask major style1">
-                        <span class="label">Science</span>
-                    </span>
-                </a>
-			</li>
-		</ul>
+		<!--<ul class="icons major">-->
+            <!--<li>-->
+                <!--<a class="icon-link" href="http://oceanobservatories.org/data/" title="OOI Data">-->
+                    <!--<span class="icon fa-database major style1">-->
+                        <!--<span class="label">Data</span>-->
+                    <!--</span>-->
+                <!--</a>-->
+			<!--</li>-->
+			<!--<li>-->
+                <!--<a class="icon-link" href="http://oceanobservatories.org/observatories/" title="The Observatory">-->
+                    <!--<span class="icon fa-map major style1">-->
+                        <!--<span class="label">Observatory</span>-->
+                    <!--</span>-->
+                <!--</a>-->
+			<!--</li>-->
+            <!--<li>-->
+                <!--<a class="icon-link" href="http://oceanobservatories.org/science/" title="Science">-->
+                    <!--<span class="icon fa-flask major style1">-->
+                        <!--<span class="label">Science</span>-->
+                    <!--</span>-->
+                <!--</a>-->
+			<!--</li>-->
+		<!--</ul>-->
 	</div>
 </section>
