--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -4,17 +4,16 @@
 		<header class="major">
 			<h2>ABOUT OCEANHACKWEEK</h2>
 			<p>
-				The Oceanhackweek is a 5-day learning hackathon built on three core components:
-				tutorials on state-of-the-art methodology, peer-learning,
-				and on-site project work in a collaborative environment.
-				This setup is particularly powerful for sciences that require not only domain-specific knowledge,
-				but also effective computational workflows to foster rapid exchange of ideas and make discovery.
-				By democratizing data access and increasing exposure to technological assets,
-				our goals are to accelerate research,
+				The Oceanhackweek is a 5-day learning hackathon aimed at exploring,
+				creating and promoting effective computation and analysis workflows for
+				large and complex oceanographic data. By democratizing data access and
+				increasing exposure to technological assets, our goals are to accelerate research,
 				promote collaboration and cultivate data science literacy among the ocean sciences community.
 			</p>
 			<p>
 				<a href="https://oceanhackweek.github.io/CAHW2018_website/">See the previous cabled array hackweek.</a>
+				|
+				<a href="/hackweeks.html">Learn about "hackweeks".</a>
 			</p>
 		</header>
 		<!--<ul class="icons major">-->
