--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -13,7 +13,7 @@
 			<p>
 				<a href="https://oceanhackweek.github.io/CAHW2018_website/">See the previous cabled array hackweek.</a>
 				|
-				<a href="/hackweeks.html">Learn about "hackweeks".</a>
+				<a href="/hackweek.html">Learn about "hackweek".</a>
 			</p>
 		</header>
 		<!--<ul class="icons major">-->
