--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,13 @@
 	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
 			integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
 			crossorigin=""></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116958811-1"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-116958811-1');
+	</script>
 </head>
