Update friedrich's image and move applicant info to its own page

--- a/_includes/section-one-two.html
+++ b/_includes/section-one-two.html
@@ -7,7 +7,7 @@
                 We focus on integrative analysis and computational workflows in ocean sciences.
                 The goal is to explore large oceanographic data sets from physical, chemical, geological,
                 and biological sensors deployed from the seafloor to the air-sea interface.
-                The focus will be on data provided by the National Science Foundations’
+                The focus will be on data provided by the National Science Foundation's
                 <a href="http://oceanobservatories.org/">Ocean Observatories Initiative (OOI)</a>.
                 Comparisons to other large-scale ocean observing assets, such as
                 <a href="http://www.argo.ucsd.edu/">Argo</a>,
