--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,9 @@
 							<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 							{% endif %} {% endfor %} {% for page in site.pages %} {% if page.layout == "page" %}
 							<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-							{% endif %} {% endfor %}
+							{% endif %} {% if page.layout == "applicant" %}
+							<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+							{% endif %}{% endfor %}
 						</ul>
 					</div>
 				</li>
