--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 {% include banner.html %}
 {% include section-one.html %}
 {% include section-one-two.html %}
-{% include section-one-two.html %}
+{% include section-one-three.html %}
 {% include section-two.html %}
 {% include section-three.html %}
 {% include section-four.html %}
