--- a/_includes/section-one-three.html
+++ b/_includes/section-one-three.html
@@ -2,7 +2,7 @@
 <section id="one-two" class="wrapper style2 special">
 	<div class="inner">
 		<header class="major">
-			<h2>Big Ocean Data</h2>
+			<h2>Quotes</h2>
 			<p>
                 We focus on integrative analysis and computational workflows in ocean sciences.
                 The goal is to explore large oceanographic data sets from physical, chemical, geological,
