--- a/_includes/section-one-three.html
+++ b/_includes/section-one-three.html
@@ -1,41 +1,11 @@
 <!-- One -->
 <section id="one-two" class="wrapper style2 special">
-	<div class="inner">
-		<header class="major">
-			<h2>Quotes</h2>
-			<p>
-                We focus on integrative analysis and computational workflows in ocean sciences.
-                The goal is to explore large oceanographic data sets from physical, chemical, geological,
-                and biological sensors deployed from the seafloor to the air-sea interface.
-                The focus will be on data provided by the National Science Foundation's
-                <a href="http://oceanobservatories.org/">Ocean Observatories Initiative (OOI)</a>.
-                Comparisons to other large-scale ocean observing assets, such as
-                <a href="http://www.argo.ucsd.edu/">Argo</a>,
-                <a href="https://ioos.noaa.gov/">IOOS</a>, etc. are welcome and encouraged.
-			</p>
-		</header>
-		<ul class="icons major">
-            <li>
-                <a class="icon-link" href="http://oceanobservatories.org/data/" title="OOI Data">
-                    <span class="icon fa-database major style1">
-                        <span class="label">Data</span>
-                    </span>
-                </a>
-			</li>
-			<li>
-                <a class="icon-link" href="http://oceanobservatories.org/observatories/" title="The Observatory">
-                    <span class="icon fa-map major style1">
-                        <span class="label">Observatory</span>
-                    </span>
-                </a>
-			</li>
-            <li>
-                <a class="icon-link" href="http://oceanobservatories.org/science/" title="Science">
-                    <span class="icon fa-flask major style1">
-                        <span class="label">Science</span>
-                    </span>
-                </a>
-			</li>
-		</ul>
-	</div>
+        <div class="inner">
+                <header class="major">
+                        <h2>Participant Quotes</h2>
+                        <p><i>"The workshop provided an excellent introduction to the existing infrastructure of oceanographic data-gathering resources. Also provided was an introduction to the open-source evolving tools for accessing and utilizing large data sets. The technical challenges in data-intensive research are daunting, and here this workshop’s model and enactment of collaborative work was particularly valuable to me."</i> ~ Rachel Jackson, San Francisco State University</p>
+                        <p><i>"I am grateful to have attended Oceanhackweek, and to have been given the opportunity to expand my skill set in such a productive and pleasant environment. I live in Fairbanks, AK, where we are rather isolated and aren’t naturally exposed to new tools or methods. Though I’ve been tinkering with open-source data science tools for a year and a half on my own, I haven’t had time to really dive in. Fortunately, Oceanhackweek gave me that time, introduced me to possibilities via the tutorials, and through the projects produced a technical structure that I can apply to our research in Alaska."</i> ~ Liz Dobbins, University of Alaska, Fairbanks</p>
+                        <p><i>"It is sometimes hard to predict whether a given conference, training or hack-a-thon might be worth your time. [...] The real challenge, of course, is to find a group of like minded people that want to expand their horizons and learn together, and that is just what I found when I attended Ocean Hackweek." </i> ~ Christian Saranson
+                </header>
+        </div>
 </section>
