--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -4,7 +4,7 @@
 		<header class="major">
 			<h2>Our Sponsors</h2>
 			<p>
-				Thanks to our sponsors that make this event possible.
+				Thanks to our sponsors that made <a href="https://oceanhackweek.github.io/ohw2018/">Oceanhackweek 2018</a> possible.
 			</p>
 		</header>
 		<div class="sponsors">
