--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1450,7 +1450,7 @@
 		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		border-bottom: dotted 1px;
-		color: #ADDFFF;
+		color: #5a9af4;
 		text-decoration: none;
 	}
 
@@ -3982,5 +3982,3 @@ a.icon-link {
 	border-bottom: none;
 
 }
-
-
