revert hyperlink color change and tweaking text/section order

--- a/_includes/section-one-two.html
+++ b/_includes/section-one-two.html
@@ -7,11 +7,13 @@
                 We focus on integrative analysis and computational workflows in ocean sciences.
                 The goal is to explore large oceanographic data sets from physical, chemical, geological,
                 and biological sensors deployed from the seafloor to the air-sea interface.
-                The focus will be on data provided by the National Science Foundation's
-                <a href="http://oceanobservatories.org/">Ocean Observatories Initiative (OOI)</a>.
-                Comparisons to other large-scale ocean observing assets, such as
+                In 2018, the focus was on data provided by the National Science Foundation's
+                <a href="http://oceanobservatories.org/">Ocean Observatories Initiative (OOI)</a>, with
+								comparisons with other large-scale ocean observing assets, such as
                 <a href="http://www.argo.ucsd.edu/">Argo</a>,
-                <a href="https://ioos.noaa.gov/">IOOS</a>, etc. are welcome and encouraged.
+                <a href="https://ioos.noaa.gov/">IOOS</a>, etc.
+								In 2019, we will explore the interoperability and integration of diverse oceanographic
+								data sets. Your ideas are welcome!
 			</p>
 		</header>
 		<ul class="icons major">
