--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1450,7 +1450,7 @@
 		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		border-bottom: dotted 1px;
-		color: #5a9af4;
+		color: inherit;
 		text-decoration: none;
 	}
 
