--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -11,7 +11,7 @@
 				promote collaboration and cultivate data science literacy among the ocean sciences community.
 			</p>
 			<p>
-				<a href="https://oceanhackweek.github.io/CAHW2018_website/">See the previous cabled array hackweek.</a>
+				<a href="https://oceanhackweek.github.io/ohw2018/">See Oceanhackweek 2018.</a>
 				|
 				<a href="/hackweek.html">Learn about "hackweek".</a>
 			</p>
