took out OOI links

--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -2,10 +2,7 @@
 <section id="three" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2>Our Sponsors</h2>
-			<p>
-				Thanks to our sponsors that made <a href="https://oceanhackweek.github.io/ohw2018/">Oceanhackweek 2018</a> possible.
-			</p>
+			<h2>Oceanhackweek 2019 Sponsors</h2>
 		</header>
 		<div class="sponsors">
 			<div class="sponsors-row">
@@ -13,21 +10,10 @@
 					<img src="assets/images/nsf.jpeg" alt="">
 				</div>
 				<div class="sponsors-logo">
-					<img src="assets/images/ooi.jpg" alt="">
-				</div>
-				<div class="sponsors-logo">
-					<img src="assets/images/col.png" alt="">
-				</div>
-			</div>
-			<div class="sponsors-row">
-				<div class="sponsors-logo">
 					<img src="assets/images/escience.png" alt="">
 				</div>
 				<div class="sponsors-logo">
-					<img src="assets/images/apl_logo_blue.jpg" alt="">
-				</div>
-				<div class="sponsors-logo">
-					<img src="assets/images/uwocean.jpg" alt="">
+					<img src="assets/images/ioos_logo.jpg" alt="">
 				</div>
 
 			</div>
