fixed header section to link to OHW 2018

--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -4,14 +4,14 @@
 		<header class="major">
 			<h2>ABOUT OCEANHACKWEEK</h2>
 			<p>
-				The Oceanhackweek is a 5-day learning hackathon aimed at exploring,
+				Oceanhackweek is a 5-day learning hackathon aimed at exploring,
 				creating and promoting effective computation and analysis workflows for
 				large and complex oceanographic data. By democratizing data access and
 				increasing exposure to technological assets, our goals are to accelerate research,
 				promote collaboration and cultivate data science literacy among the ocean sciences community.
 			</p>
 			<p>
-				<a href="https://oceanhackweek.github.io/CAHW2018_website/">See the previous cabled array hackweek.</a>
+				<a href="https://oceanhackweek.github.io/ohw2018/">See the previously held Oceanhackweek 2018</a>
 				|
 				<a href="/hackweek.html">Learn about "hackweek".</a>
 			</p>
