--- a/_includes/section-one-two.html
+++ b/_includes/section-one-two.html
@@ -4,17 +4,9 @@
 		<header class="major">
 			<h2>Big Ocean Data </h2>
 			<p>
-                We focus on integrative analysis and computational workflows in ocean sciences.
-                The goal is to explore large oceanographic data sets from physical, chemical, geological,
-                and biological sensors deployed from the seafloor to the air-sea interface.
-                The focus will be on data provided by the National Science Foundation's
-                <a href="http://oceanobservatories.org/">Ocean Observatories Initiative (OOI)</a>.
-                Comparisons to other large-scale ocean observing assets, such as
-                <a href="http://www.argo.ucsd.edu/">Argo</a>,
-                <a href="https://ioos.noaa.gov/">IOOS</a>, etc. are welcome and encouraged.
+                Oceanhackweek focuses on integrative analysis and computational workflows in ocean sciences.
+                The goal is to help participants navigate the data deluge and to accelerate scientific discovery.  
 			</p>
 		</header>
-		<ul class="icons major">
-		</ul>
 	</div>
 </section>
