shorten section heading

--- a/_includes/section-one-three.html
+++ b/_includes/section-one-three.html
@@ -2,7 +2,7 @@
 <section id="one-two" class="wrapper style2 special">
         <div class="inner">
                 <header class="major">
-                        <h2>Oceanhackweek2018 Participant Quotes</h2>
+                        <h2>2018 Participant Quotes</h2>
                         <p><i>"The workshop provided an excellent introduction to the existing infrastructure of oceanographic data-gathering resources. Also provided was an introduction to the open-source evolving tools for accessing and utilizing large data sets. The technical challenges in data-intensive research are daunting, and here this workshop’s model and enactment of collaborative work was particularly valuable to me."</i> ~ Rachel Jackson, San Francisco State University</p>
                         <p><i>"I am grateful to have attended Oceanhackweek, and to have been given the opportunity to expand my skill set in such a productive and pleasant environment. I live in Fairbanks, AK, where we are rather isolated and aren't naturally exposed to new tools or methods. [...] Oceanhackweek gave me that time, introduced me to possibilities via the tutorials, and through the projects produced a technical structure that I can apply to our research in Alaska."</i> ~ Liz Dobbins, University of Alaska, Fairbanks</p>
 
