--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -15,6 +15,9 @@
 				<div class="sponsors-logo">
 					<img src="assets/images/ioos_logo.jpg" alt="">
 				</div>
+				<div class="sponsors-logo">
+                                        <img src="assets/images/ooi.jpg" alt="">
+                                </div>
 
 			</div>
 		</div>
